corrected animation alignment

--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body::-webkit-scrollbar{
     height: 80vh;
     padding: 0% 10%;
     position: absolute;
-    top:10%;
+    top:8%;
 }
 
 .section-2{
